[package]
name = "win-kernel-driver"
version = "0.0.1"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version="0.3.8", features = ["fileapi", "ioapiset", "winnt", "handleapi", "errhandlingapi", "std", "winbase", "winioctl"] }
windows-service = "0.2.0"
err-derive = {version="=0.1.5"}

[lib]
name = "win_kernel_driver"
