[package]
name = "win_ring0"
version = "0.0.1"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"
include = ["WinRing0.sys", "WinRing0x64.sys"]

[dependencies]
winapi = { version="0.3.8", features = ["fileapi", "ioapiset", "winnt", "handleapi", "errhandlingapi", "std", "winbase"] }
windows-service = "0.2.0"
err-derive = {version="=0.1.5"}
win-kernel-driver = { path = "../win-kernel-driver" }
